# chia

./: .gitignore  .gitmodules  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: antigravity.yml  build-chia-circt-base.yml  cacti.yml  chia-circt.yml  chia.yml  chipyard.yml  claude-code.yml  esp.yml  gem5.yml  ollama.yml  opencode.yml  riscv-cross.yml  riscv-dv.yml  verilator-run.yml  vllm.yml
chia/analysis/: __init__.py
chia/aws/: config.py  ec2.py  host.py  s3.py
chia/base/: ChiaFunction.py  bypass.py  cache.py  chia_kv_store.py  (+5 more)
dockerfiles/: AntigravityDockerfile  CactiDockerfile  ChiaCirctBaseDockerfile  ChiaCirctDockerfile  ChiaDockerfile  ChipyardDockerfile  ClaudeCodeDockerfile  Gem5Dockerfile  OllamaDockerfile  OpenCodeDockerfile  RiscvCrossDockerfile  RiscvDvDockerfile  VLLMDockerfile  VerilatorRunDockerfile  install-conda.sh
docs/: conf.py  index.rst  requirements.txt
test/: .gitignore  hello.riscv  run_chisel_riscv_verilator_tests.sh  test_chia_remote_blocking.py  test_chipyard_dockerfile_bar.py  test_chisel_riscv_verilator_cluster.yaml  test_chisel_riscv_verilator_e2e.py  test_firesim_build_e2e.py  test_firesim_build_megaboom_all.py  test_firesim_build_ray.py  test_firesim_metasim_build.py  test_firesim_metasim_run.py  test_firesim_run_e2e.py  test_firesim_suite_e2e.py  test_github_issues_e2e.py  test_llm_node.py  test_llm_setup.yaml  test_metrics_logger.py  test_riscv_build_failure.py  test_riscv_timeout_output_decode.py  test_s3_e2e.py  test_tool.py  test_tool_cluster.yaml  test_verilator_run.py
(+368 files in other folders)
